# dlseis_well_tie

./: .gitignore  README.md  environment_windows.yml  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py
data/tutorial/Poseidon/boreas1/: Boreas1_dev.txt  Boreas1_vel.txt
data/tutorial/Poseidon/torosa1/: Torosa1Decim.LAS
notebooks/: 01_Data_Import.ipynb  02_Introduction_to_wtie.ipynb  03_Auto_Well_Tie.ipynb  04_Prestack_Auto_Tie.ipynb  05_Neural_Network_Training.ipynb  hyper_search_variational_results.ipynb  tempCodeRunnerFile.ipynb  teste.ipynb  tutorial1.py  tutorial2.py  tutorial3.py  tutorial4.py
petrel/: basic_well_tie.py  config.json  generics.py  interface.py  interface2.py  interface_well_tie.bat  run_isolated.py  selected_data.json  teste.ipynb  teste.py
petrel/testes/: config.json  selected_data.json
petrel/testes/boreas/: config.json
petrel/testes/torosa/: config.json  selected_data.json
tests/: test_network.py
wtie/learning/: model.py
wtie/optimize/: autotie.py  logs.py  optimizer.py  tie.py  warping.py  wavelet.py
wtie/processing/: grid.py  logs.py  reflection.py  warping.py
wtie/utils/: viz.py
wtie/utils/datasets/: tutorial.py
