[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtie"
version = "0.1.0"
description = "Deep Learning Seismic Well Tie"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "h5py>=3.9.0",
    "numba>=0.57.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "segyio>=1.9.0",
    "lasio>=0.31.0",
    "noise>=1.2.2",
    "dtaidistance>=2.3.0",
    "ax-platform>=0.3.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pylint>=2.17.0",
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
    "pdoc3>=0.10.0",
]

[tool.setuptools]
packages = ["wtie"]
